--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.05.2022 07:47:14</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.05.2022 08:15:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pondělí, 02. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s pestem</strong>
+<strong>Hrášková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na kmíně s rýží</strong>
+<strong>Těstoviny pomodoro-peperoncino s parmazánem a řeřichou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							133,-
 						</span>
 </p>
 <p>
-<strong>Šišky s mákem, cukrem a máslem</strong>
+<strong>Mexický guláš s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							135,-
 						</span>
 </p>
 <p>
