--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.05.2022 08:15:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.05.2022 08:46:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk se salsou z cerstvych rajcat a okurek, korenena ryze s beluga cockou, salatek 145</li><li>Peceny filet z cerstveho morskeho vlka se salsou z cerstvych rajcat a okurek, korenena ryze s beluga cockou, salatek 175</li><li>Ti Pang – pomalu dusene cinske veprove koleno {bez kosti} ve sladke a vonave omacce, jasminova ryze, pak coj 145</li><li>Jehneci burger {chipotle majoneza, rajcata, pekingske zeli, emental}, pecene brambory, salatek 169</li><li>Pecene papriky, cukety a cibule zapecene s ementalem, stredomorsky jahlovy salat se zeleninou a pazitkou, jogurtovy dip 145</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, halibut, makrela}, kvetakem, pak coj a kokosovym mlekem, jasminova ryze 145</li><li>Peceny filet z cerstve tresky bile s pazitkovou jogurtovou omackou, pecene brambory, salatek 175</li><li>Burrito s chilli con carne z hoveziho masa s pecenymi paprikami, cervenymi fazolemi a chipotle chilli, jasminova ryze, salatek {L} 145</li><li>Spagety s parmskou sunkou, pak coj, cesnekem a hoblinami zrale goudy {L} 169</li><li>Zapecene cukety plnene cockou s rajcaty, cibulkou a paprikami, pazitkovy jogurtovy dip, salatek 145</li></ol>
 </td>
 </tr>
 </table>
